--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,11 +93,6 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v2
 
-      - run: ls -la
-
-      #- name: Increase File Watchers 🔭
-      #  run: echo fs.inotify.max_user_watches=524288 | sudo tee -a /etc/sysctl.conf # && sudo sysctl -p
-
       - name: Download the build folders ⏬
         uses: actions/download-artifact@v2
         with:
@@ -116,16 +111,21 @@ jobs:
           browser: chrome
           headless: true
 
+      - run: tree cypress/videos
+
       - name: Component tests 🧪
         uses: cypress-io/github-action@v2
         with:
           # we have already installed everything
           install: false
           record: true
+          start: CHOKIDAR_USEPOLLING=1
           # Use custom script for "cypress run-ct" so that browser var can be supplied easily
           # Use Long Polling because of max file-watchers: https://github.com/cypress-io/github-action/issues/317
-          command: yarn test:int --ct -v --browser chrome
-          
+          command: CHOKIDAR_USEPOLLING=1 && yarn test:int --ct -v --browser chrome
+        
+      - run: tree cypress/videos
+
       - name: Upload Screenshots 📸
         uses: actions/upload-artifact@v1
         if: failure()
